--- a/installer/Product.wxs
+++ b/installer/Product.wxs
@@ -13,46 +13,118 @@
                  Description="Unity Cache Cleaner - A tool for managing Unity project caches and credentials"
                  Comments="Beta Release 1.3.0" />
 
-        <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
+        <MajorUpgrade AllowSameVersionUpgrades="yes"
+                      DowngradeErrorMessage="A newer version of [ProductName] is already installed." 
+                      Schedule="afterInstallInitialize"/>
+        
         <MediaTemplate EmbedCab="yes"/>
 
+        <!-- Properties -->
+        <Property Id="WIXUI_INSTALLDIR" Value="INSTALLFOLDER" />
+        <Property Id="CREATEDESKTOPSHORTCUT" Value="1" />
+        <Property Id="AUTOSTART" Value="1" />
+        <Property Id="FILEASSOCIATIONS" Value="1" />
+        <Property Id="AUTOUPDATE" Value="1" />
+        
+        <!-- UI -->
+        <UI>
+            <UIRef Id="WixUI_InstallDir" />
+            <Publish Dialog="ExitDialog" 
+                     Control="Finish" 
+                     Event="DoAction" 
+                     Value="LaunchApplication">WIXUI_EXITDIALOGOPTIONALCHECKBOX = 1 and NOT Installed</Publish>
+        </UI>
+        
+        <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOX" Value="1"/>
+        <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT" Value="Launch Unity Cache Cleaner"/>
+
+        <!-- Features -->
         <Feature Id="ProductFeature" Title="Unity Cache Cleaner" Level="1">
             <ComponentGroupRef Id="ProductComponents" />
             <ComponentRef Id="ApplicationShortcut" />
+            <ComponentRef Id="DesktopShortcut" />
+            <ComponentRef Id="FileAssociations" />
+            <ComponentRef Id="AutoUpdateRegistry" />
         </Feature>
 
-        <!-- Start Menu Shortcut -->
-        <DirectoryRef Id="ApplicationProgramsFolder">
-            <Component Id="ApplicationShortcut" Guid="*">
-                <Shortcut Id="ApplicationStartMenuShortcut" 
-                         Name="Unity Cache Cleaner" 
-                         Description="Clean Unity project caches and manage credentials"
-                         Target="[#UnityCacheCleanerEXE]"
-                         WorkingDirectory="INSTALLFOLDER"/>
-                <RemoveFolder Id="CleanupShortcut" Directory="ApplicationProgramsFolder" On="uninstall"/>
-                <RegistryValue Root="HKCU" Key="Software\Serovectra\UnityCacheCleaner" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-            </Component>
-        </DirectoryRef>
-
+        <!-- Directory Structure -->
         <Directory Id="TARGETDIR" Name="SourceDir">
             <Directory Id="ProgramFilesFolder">
                 <Directory Id="INSTALLFOLDER" Name="Unity Cache Cleaner">
-                    <!-- Application Files -->
+                    <Directory Id="BinDir" Name="bin" />
                 </Directory>
             </Directory>
             <Directory Id="ProgramMenuFolder">
                 <Directory Id="ApplicationProgramsFolder" Name="Unity Cache Cleaner"/>
             </Directory>
+            <Directory Id="DesktopFolder" Name="Desktop" />
         </Directory>
 
-        <ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
-            <Component Id="ProductComponent" Guid="*">
-                <File Id="UnityCacheCleanerEXE" Source="$(var.BinDir)\UnityCacheCleaner.exe" KeyPath="yes"/>
-                <!-- Add other necessary files here -->
+        <!-- Components -->
+        <ComponentGroup Id="ProductComponents" Directory="BinDir">
+            <Component Id="MainExecutable" Guid="*">
+                <File Id="UnityCacheCleanerEXE" 
+                      Source="$(var.BinDir)\UnityCacheCleaner.exe" 
+                      KeyPath="yes">
+                    <Shortcut Id="StartMenuShortcut"
+                              Directory="ApplicationProgramsFolder"
+                              Name="Unity Cache Cleaner"
+                              WorkingDirectory="BinDir"
+                              Icon="UnityCacheCleaner.exe"
+                              IconIndex="0"
+                              Advertise="yes" />
+                </File>
             </Component>
         </ComponentGroup>
 
-        <Property Id="WIXUI_INSTALLDIR" Value="INSTALLFOLDER" />
-        <UIRef Id="WixUI_InstallDir" />
+        <!-- Desktop Shortcut -->
+        <Component Id="DesktopShortcut" Directory="DesktopFolder" Guid="*">
+            <Condition>CREATEDESKTOPSHORTCUT</Condition>
+            <Shortcut Id="DesktopShortcut"
+                      Name="Unity Cache Cleaner"
+                      Target="[BinDir]UnityCacheCleaner.exe"
+                      WorkingDirectory="BinDir"/>
+            <RegistryValue Root="HKCU" 
+                          Key="Software\Serovectra\UnityCacheCleaner" 
+                          Name="DesktopShortcut" 
+                          Type="integer" 
+                          Value="1" 
+                          KeyPath="yes"/>
+        </Component>
+
+        <!-- File Associations -->
+        <Component Id="FileAssociations" Directory="INSTALLFOLDER" Guid="*">
+            <Condition>FILEASSOCIATIONS</Condition>
+            <RegistryValue Root="HKLM" 
+                          Key="Software\Classes\.unityproj" 
+                          Value="UnityProject" 
+                          Type="string" 
+                          KeyPath="yes"/>
+            <RegistryValue Root="HKLM" 
+                          Key="Software\Classes\UnityProject\shell\clean\command" 
+                          Value="&quot;[BinDir]UnityCacheCleaner.exe&quot; &quot;%1&quot;" 
+                          Type="string"/>
+        </Component>
+
+        <!-- Auto Update Registry -->
+        <Component Id="AutoUpdateRegistry" Directory="INSTALLFOLDER" Guid="*">
+            <Condition>AUTOUPDATE</Condition>
+            <RegistryValue Root="HKCU" 
+                          Key="Software\Serovectra\UnityCacheCleaner" 
+                          Name="AutoUpdate" 
+                          Type="integer" 
+                          Value="1" 
+                          KeyPath="yes"/>
+        </Component>
+
+        <!-- Icons -->
+        <Icon Id="UnityCacheCleaner.exe" SourceFile="$(var.BinDir)\UnityCacheCleaner.exe"/>
+        <Property Id="ARPPRODUCTICON" Value="UnityCacheCleaner.exe"/>
+
+        <!-- Custom Actions -->
+        <CustomAction Id="LaunchApplication" 
+                     FileKey="UnityCacheCleanerEXE"
+                     ExeCommand="" 
+                     Return="asyncNoWait"/>
     </Product>
 </Wix>
